# PNGER

./: .gitignore  CMakeLists.txt  Makefile  README.md
glad/include/glad/: gl.h
src/: draw.h  image.c  image.h  main.c  main.h  png.c  png.h
